--- a/index.html
+++ b/index.html
@@ -137,37 +137,17 @@
                         <div class="first-row row m-2 p-1 d-flex">
                             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
                                 <div class="single-brand">
-                                    <img class="img-fluid" src="./img/tools/figma.webp" alt="">
-                                </div>
-                            </div>
-                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
-                                <div class="single-brand">
-                                    <img class="img-fluid" src="./img/tools/Logo2.png" alt="">
-                                </div>
-                            </div>
-                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
-                                <div class="single-brand">
-                                    <img class="img-fluid" src="./img/tools/Logo3.svg" alt="">
+                                    <img class="img-fluid p-1" src="./img/tools/Logo2.png" alt="">
                                 </div>
                             </div>
                             <div class="col-lg-3 col-md-4 col-sm-6">
                                 <div class="single-brand">
-                                    <img class="img-fluid" src="./img/tools/Logo4.png" alt="">
+                                    <img class="img-fluid p-1" src="./img/tools/Logo7.png" alt="">
                                 </div>
                             </div>
                             <div class="col-lg-3 col-md-4 col-sm-6">
                                 <div class="single-brand">
-                                    <img class="img-fluid" src="./img/tools/canva.png" alt="">
-                                </div>
-                            </div>
-                            <div class="col-lg-3 col-md-4 col-sm-6">
-                                <div class="single-brand">
-                                    <img class="img-fluid" src="./img/tools/Logo6.png" alt="">
-                                </div>
-                            </div>
-                            <div class="col-lg-3 col-md-4 col-sm-6">
-                                <div class="single-brand">
-                                    <img class="img-fluid" src="./img/tools/Logo7.png" alt="">
+                                    <img class="img-fluid p-1" src="./img/tools/git.png" alt="">
                                 </div>
                             </div>
                             <div class="col-lg-3 col-md-4 col-sm-6">
@@ -187,17 +167,17 @@
                             </div>
                             <div class="col-lg-3 col-md-4 col-sm-6">
                                 <div class="single-brand">
-                                    <img class="img-fluid" src="./img/tools/Logo11.png" alt="">
+                                    <img class="img-fluid p-1" src="./img/tools/Logo11.png" alt="">
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6">
+                                <div class="single-brand">
+                                    <img class="img-fluid p-1" src="./img/tools/bs.png" alt="">
                                 </div>
                             </div>
                             <div class="col-lg-3 col-md-4 col-sm-6">
                                 <div class="single-brand">
                                     <img class="img-fluid" src="./img/tools/Logo12.png" alt="">
-                                </div>
-                            </div>
-                            <div class="col-lg-3 col-md-4 col-sm-6">
-                                <div class="single-brand">
-                                    <img class="img-fluid" src="./img/tools/bs.png" alt="">
                                 </div>
                             </div>
                             <div class="col-lg-3 col-md-4 col-sm-6">
@@ -208,6 +188,31 @@
                             <div class="col-lg-3 col-md-4 col-sm-6">
                                 <div class="single-brand">
                                     <img class="img-fluid" src="./img/tools/mg.png" alt="">
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
+                                <div class="single-brand">
+                                    <img class="img-fluid" src="./img/tools/figma.webp" alt="">
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6">
+                                <div class="single-brand">
+                                    <img class="img-fluid p-1" src="./img/tools/Logo6.png" alt="">
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6">
+                                <div class="single-brand">
+                                    <img class="img-fluid" src="./img/tools/canva.png" alt="">
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
+                                <div class="single-brand">
+                                    <img class="img-fluid p-1" src="./img/tools/Logo3.svg" alt="">
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6">
+                                <div class="single-brand ">
+                                    <img class="img-fluid p-1" src="./img/tools/Logo4.png" alt="">
                                 </div>
                             </div>
                         </div>
