--- a/index.html
+++ b/index.html
@@ -97,34 +97,32 @@
         </section>
 
         <section class="about-area" id="about">
-            <div class="container-fluid p-5 m-3">
+            <div class="container-fluid pt-5">
                 <div class="row px-3">
-                    <div class="col-lg-6 col-md-12 about-image">
+                    <div class="col-lg-6 col-md-12 about-image text-right">
                         <img class="img-fluid" src="./img/girl.webp" alt="">
                     </div>
                     <div class="col-lg-6 col-md-12 about-title">
-                        <h2 class="text-uppercase  text-dark pt-3">
+                        <h2 class="text-uppercase  text-dark">
                             <span style="color: var(--primary-color); font-size: 2.5rem;">about me</span>
                         </h2>
                         <div class="paragraph">
-                            <p class="para text-justify mr-3">
-                                My unique blend of UI/UX design and front-end development skills allows me to create
-                                designs that not only look great, but also function seamlessly.
-                                I have a deep understanding of user behavior and am able to translate user needs and
-                                business requirements into engaging and effective designs.
-                                With my strong attention to detail and ability to collaborate with cross-functional
-                                teams, I am able to deliver projects on time and to the highest quality.
-                                <br> <br> I am always exploring new technologies and design trends to stay ahead of the
-                                curve and bring fresh ideas to every project. Let's connect and discuss how I can help
-                                elevate your next design project.
+                            <p class="para text-justify pr-5">
+                                I am Varsha, a dedicated and adaptable individual pursuing a <span class="text-dark">B.Tech in Computer Science</span> at Lakshmi Narain College of Technology. 
+                                I have a strong passion for developing innovative solutions, and this drive has led me to create numerous projects from scratch, which I you can walk through later on this page.
+                                I eagerly embrace change and view it as an opportunity for personal growth and innovation. 
+                                My creativity fuels my approach to problem-solving, allowing me to find unique solutions to complex challenges. 
+                                Effective communication is another forte, enabling me to articulate ideas clearly, whether presenting user interface designs or collaborating with cross-functional teams.
+                                Effective time management further complements my skill set, allowing me to efficiently handle multiple responsibilities.
+                                <br><br>
+                                In summary, I am a well-rounded individual who brings a rich tapestry of qualities to the table. 
+                                My adaptability, creativity, communication, leadership, organizational, problem-solving, and time-management skills make me a valuable asset in any professional setting. 
+                                I am eager to channel these qualities into contributing meaningfully to future projects and challenges.
                             </p>
                         </div>
                         <a class="libutton primary-button"
                             href="https://www.linkedin.com/comm/mynetwork/discovery-see-all?usecase=PEOPLE_FOLLOWS&followMember=itsvarsharma"
                             target="_blank">Follow on LinkedIn</a>
-                        <!-- <a href="./Resume-Varsha.pdf" target="_blank" rel="noopener noreferrer" -->
-                        <!-- class="btn button primary-button mr-4 text-uppercase">download -->
-                        <!-- cv</a> -->
                     </div>
                 </div>
             </div>
@@ -322,7 +320,7 @@
         </section>
 
         <section id="projects">
-            <div class="wrap">
+            <!-- <div class="wrap"> -->
                 <!-- <div class="row">
                     <div class="col-lg-12 text-center services-title">
                         <h3 class="text-uppercase title-text">My Projects</h3><br>
@@ -336,7 +334,8 @@
                         </p>
                     </div>
                 </div> -->
-                <div class="container">
+
+                <!-- <div class="container"> -->
                     <!-- <div class="row ">
 
                         <div class="col-lg-3 col-md-6 col-sm-12 tile">
@@ -435,11 +434,11 @@
                             </div>
                         </div>
                     </div> -->
-                </div>
-            </div>
+                <!-- </div> -->
+            <!-- </div> -->
 
-            <div class="container">
-                <div class="text-center m-3">
+            <div class="container text-center">
+                <div class="text-center">
                     <h1 class="title-text text-uppercase" style="color: var(--primary-color);">my Projects</h1>
                 </div>
                 <div class="container">
@@ -579,6 +578,7 @@
                     </div>
                 </div>
             </div>
+            
         </section>
 
         <section class="session">
