--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                             </div>
                             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
                                 <div class="single-brand">
-                                    <img class="img-fluid p-1" src="./img/tools/Logo3.svg" alt="">
+                                    <img class="img-fluid p-1" src="./img/tools/Logo3.png" alt="">
                                 </div>
                             </div>
                             <div class="col-lg-3 col-md-4 col-sm-6">
@@ -703,13 +703,13 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-md-6 col-sm-6 col-xs-12">
+                <div class="col-md-4 col-sm-12 col-xs-12">
                     <p class="copyright-text">Copyright &copy; 2023 All Rights Reserved by
                         <a href="#">Varsha Sharma</a>.
                     </p>
                 </div>
 
-                <div class="col-md-6 col-sm-6 col-xs-12">
+                <div class="col-md-8 col-sm-12 col-xs-12">
                     <ul class="social-icons">
                         <li><a class="twitter" href="https://twitter.com/itsvarsharma"><img src="/img/logos/logo1.png"
                                     alt=""></a></li>
