--- a/index.html
+++ b/index.html
@@ -633,6 +633,9 @@
                 </div>
             </a>
         </section>
+        <section class="achievements">
+            <div></div>
+        </section>
 
         <section class="last container">
             <div class="row mt-5">
