--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                                 <h2>
                                     <span>Years</span>
                                     <span>Experience</span>
-                                    <span>Working</span>
+                                    <span>Developing</span>
                                 </h2>
                             </div>
                             <div class="mt-4"></div>
@@ -589,7 +589,7 @@
                 </div>
             </div>
         </section>
-        
+
         <section class="center-image mt-5 pt-5">
             <div class="container justify-items-center">
                 <div class="row">
