--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                                 <a class="nav-link px-3" href="#">Home<span class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link px-3" href="#about">Projects</a>
+                                <a class="nav-link px-3" href="#projects">Projects</a>
                             </li>
                             <li class="nav-item px-3"><a class="nav-link"
                                     href="https://www.behance.net/varshasharma12">behance</a></li>
@@ -51,7 +51,7 @@
                                 <a class="nav-link" href="https://leetcode.com/itsvarsharma">LEETCODE</a>
                             </li>
                             <li class="nav-item px-3">
-                                <a class="nav-link" href="#projects">achievements</a>
+                                <a class="nav-link" href="#achievements">achievements</a>
                             </li>
                             <li class="nav-item px-3">
                                 <a class="nav-link" href="#contacts">ABOUT</a>
@@ -568,7 +568,7 @@
             </div>
             
         </section>
-        <section class="achievements pt-5">
+        <section class="achievements pt-5" id="achievements">
             <div class="container pt-4 mt-3">
                 <div class=" text-center text-uppercase pt-3"> 
                     <h1 class="display-5" style="color: var(--primary-color);">achievements</h1>
