--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
                             <li class="list-group-item border-0"> <div class="d-flex flex-row"> <div class="mr-2"><i class=" fa fa-trophy text-primary"></i></div><div> Achieved <span class="font-weight-bold">AIR 148</span>  and  <span class="font-weight-bold">AIR 35 </span>in TechGig Geek Goddess Open Round 2022 and TG3 Coding Challenge 2022 respectively</div> </div></li>
                             <li class="list-group-item border-0"> <div class="d-flex flex-row"> <div class="mr-2"><i class=" fa fa-shield text-primary"></i></div><div> Achieved finalist positions in <span class="font-weight-bold">4+ hackathons,</span>  worked on real-world problems along with the team</div> </div></li>
                             <li class="list-group-item border-0"> <div class="d-flex flex-row"> <div class="mr-2"><i class=" fa fa-calendar text-primary"></i></div><div> Organized and coordinated <span class="font-weight-bold">3 National and International hackathons</span></div> </div></li>
-                            <li class="list-group-item border-0"> <div class="d-flex flex-row"> <div class="mr-2"><i class=" fa fa-users text-primary"></i></div><div> Founded and lead a community, mentored over <span class="font-weight-bold">150+</span>students</div> </div></li>
+                            <li class="list-group-item border-0"> <div class="d-flex flex-row"> <div class="mr-2"><i class=" fa fa-users text-primary"></i></div><div> Founded and lead a community, mentored over <span class="font-weight-bold">150 </span>students</div> </div></li>
                         </ul>
                     </div>
                 </div>
