added a recent project

--- a/index.html
+++ b/index.html
@@ -333,11 +333,11 @@
                             <div class="card-body">
                                 <h5 class="card-title text-primary">Genius</h5>
                                 <p class="card-text text-dark">
-                                    Genius is an AI-powered SaaS platform designed to provide users with a wide array of
-                                    capabilities. It offers 5 functionalities, including conversational bot and
-                                    AI-driven code, image, video, and music generation.
-                                    The platform ensures data security through secure Clerk Authentication, with 10 free
-                                    trials and a Premium feature for unlimited usage.
+                                    Genius is an <b>AI-powered SaaS platform</b> designed to provide users with a wide array of
+                                    capabilities. It offers <i>5 functionalities, including conversational bot and
+                                    AI-driven code, image, video, and music generation</i>.
+                                    The platform ensures data security through secure <b>Clerk Authentication</b>, with <b>10 free
+                                    trials</b> and a <b>Premium feature</b> for unlimited usage.
                                 </p>
                                 <p class="card-text">
                                     <small>
@@ -356,8 +356,9 @@
                                 <h5 class="card-title text-primary">Blockchain with JavaScript</h5>
                                 <p class="card-text text-dark">
                                     It's an innovative project that brings blockchain technology to the local development environment. 
-                                    It serves as a decentralized digital ledger system. It allows for the creation, validation, and recording of transactional data in a secure and tamper-resistant manner. 
-                                    This self-contained solution provides a foundation for understanding blockchain technology on a smaller scale.                                </p>
+                                    It serves as a <b>decentralized digital ledger system</b>. It allows for the creation, validation, and recording of transactional data in a secure and tamper-resistant manner. 
+                                    This self-contained solution provides a foundation for understanding blockchain technology on a smaller scale.                                
+                                </p>
                                 <p class="card-text">
                                     <small>
                                         <span class="text-muted">Link <i class="fas fa-external-link"></i></span><br>
@@ -375,7 +376,7 @@
                                 <h5 class="card-title text-primary">Satkaar</h5>
                                 <p class="card-text text-dark">
                                     Satkaar, an Indian tourism app, serves as a gateway to the rich cultural tapestry of India. 
-                                    It facilitates the discovery and booking of homestays across the country, offering travelers an authentic and immersive experience. 
+                                    It facilitates the <b>discovery and booking of homestays</b> across the country, offering travelers an authentic and immersive experience. 
                                     Explore diverse destinations and experience warm hospitality through this travel companion.
                                     <p class="card-text">
                                     <small>
@@ -388,17 +389,38 @@
                                 </p>
                             </div>
                         </div>
+                        <div class="card p-colorpick">
+                            <img class="card-img-top " src="./img/projects/colorpick.png" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title text-primary">ColorPick: Chrome Extension</h5>
+                                <p class="card-text text-dark">
+                                    It is a handy tool that allows users to <b>select and save colors</b> from web pages. 
+                                    With this extension, users can easily extract and save color codes, enhancing their web design and development workflow.
+                                </p>
+                                <p class="card-text">
+                                    <small>
+                                        <span>Link <i class="fas fa-external-link"></i></span><br>
+                                            <a href="https://github.com/itsvarsharma/ColorPicke" target="_blank"
+                                            rel="noopener noreferrer">
+                                            <span>Source code <i class="fas fa-code"></i></span>
+                                        </a>
+                                    </small>
+                                </p>
+                            </div>
+                        </div>
+                        
 
                         <!-- column 2--------------------------------------- -->
                         <div class="card p-srijan">
-                            <img class="card-img-top " src="./img/projects/srijan.png" alt="Card image cap">
+                            <img class="card-img-top " src="./img/projects/codetrack.png" alt="Card image cap">
                             <div class="card-body">
-                                <h5 class="card-title text-primary">Srijan</h5>
+                                <h5 class="card-title text-primary">CodeTrack</h5>
                                 <p class="card-text text-dark">
-                                    A cutting-edge personalized gifting e-commerce website featuring AR-VR integration. 
-                                    Front-end is crafted using HTML, CSS, JavaScript, using TailwindCSS. 
-                                    Customers can explore and customize gifts in a unique and interactive way.
-                                </p>
+                                    
+                                    CodeTrack is your comprehensive coding companion, simplifying progress tracking for <b>Leetcode, Codeforces, and Codechef</b>. 
+                                    We've implemented secure authentication, serving <b>200+ users </b> from diverse institutions. 
+                                    Our tech stack includes HTML, CSS, JavaScript, Bootstrap, Django, and Beautiful Soup. 
+                                    Join us to enhance your coding skills and enjoy friendly competition, all in one platform. Explore CodeTrack now for a seamless coding journey                                </p>
                                 <p class="card-text">
                                     <small>
                                         <a href="https://srijan2.netlify.app/"
@@ -419,7 +441,7 @@
                                 <h5 class="card-title text-primary">My Portfolio</h5>
                                 <p class="card-text text-dark">
                                     My portfolio is a testament to my extensive experience and expertise in various domains. 
-                                    With over 10 successful projects under my belt, including 2 educational sessions and 4 comprehensive chapters, it showcases my ability to deliver tangible results. 
+                                    With <b>10+ successful projects</b> under my belt, including <b>2 educational sessions</b> and <b>4 comprehensive chapters</b>, it showcases my ability to deliver tangible results. 
                                     These projects span diverse industries, highlighting my versatility and commitment to excellence in every endeavor.
                                 </p>
                                 <p class="card-text">
@@ -442,7 +464,7 @@
                             <div class="card-body">
                                 <h5 class="card-title text-primary">Weather App</h5>
                                 <p class="card-text text-dark">
-                                    This Weather App, created using HTML, CSS, and JavaScript, utilizing the OpenWeather API, offers users real-time weather information. 
+                                    This Weather App, created using HTML, CSS, and JavaScript, utilizing the OpenWeather API, offers users <b>real-time weather information</b>. 
                                     This interactive web application provides current weather conditions and  forecasts enhancing user access to vital meteorological information
                                 </p>
                                 <p class="card-text">
@@ -459,7 +481,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="card p-todo">
+                        <div class="card p-rps">
                             <img class="card-img-top " src="./img/projects/rps.png" alt="Card image cap">
                             <div class="card-body">
                                 <h5 class="card-title text-primary">Rock-Paper-Scissors</h5>
@@ -483,8 +505,8 @@
                             <div class="card-body">
                                 <h5 class="card-title text-primary">GRAAS</h5>
                                 <p class="card-text text-dark">
-                                    Leveraging image-based string generation and encryption techniques, this project ensures robust security for user authentication. 
-                                    By combining visually intuitive elements with encryption, it provides a secure and user-friendly authentication method that enhances data protection.
+                                    Leveraging <b>image-based string generation</b> and encryption techniques, this project ensures robust security for user authentication. 
+                                    By combining visually intuitive elements with encryption, it provides a secure and <b>user-friendly authentication</b> method that enhances data protection.
                                 </p>
                                 <p class="card-text">
                                     <small>
@@ -500,18 +522,22 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="card p-colorpick">
-                            <img class="card-img-top " src="./img/projects/colorpick.png" alt="Card image cap">
+                        <div class="card p-srijan">
+                            <img class="card-img-top " src="./img/projects/srijan.png" alt="Card image cap">
                             <div class="card-body">
-                                <h5 class="card-title text-primary">ColorPick: Chrome Extension</h5>
+                                <h5 class="card-title text-primary">Srijan</h5>
                                 <p class="card-text text-dark">
-                                    It is a handy tool that allows users to select and save colors from web pages. 
-                                    With this extension, users can easily extract and save color codes, enhancing their web design and development workflow.
+                                    A cutting-edge personalized <b>gifting e-commerce website</b> featuring AR-VR integration. 
+                                    Front-end is crafted using HTML, CSS, JavaScript, using TailwindCSS. 
+                                    Customers can explore and customize gifts in a unique and interactive way.
                                 </p>
                                 <p class="card-text">
                                     <small>
+                                        <a href="https://srijan2.netlify.app/"
+                                        target="_blank" rel="noopener noreferrer">
                                         <span>Link <i class="fas fa-external-link"></i></span><br>
-                                            <a href="https://github.com/itsvarsharma/ColorPicke" target="_blank"
+                                        </a>
+                                            <a href="https://github.com/itsvarsharma/srijanv2" target="_blank"
                                             rel="noopener noreferrer">
                                             <span>Source code <i class="fas fa-code"></i></span>
                                         </a>
@@ -525,7 +551,7 @@
                                 <h5 class="card-title text-primary">ERITH</h5>
                                 <p class="card-text text-dark">
                                     ERITH is a calculator app, made using HTML, CSS and JavaScript, that provides simple, accurate, and
-                                    efficient calculations, offering all arithmatic operations to meet individual needs. It ensures complete responsiveness over all devises.
+                                    efficient calculations, offering <b>all arithmatic operations</b> to meet individual needs. It ensures complete responsiveness over all devises.
                                 </p>
                                 <p class="card-text">
                                     <small>
@@ -581,6 +607,7 @@
                         <ul class="list-group list-group-light">
                             <li class="list-group-item border-0"> <div class="d-flex flex-row"> <div class="mr-2"><i class=" fa fa-line-chart text-primary"></i></div><div>Solved <span class="font-weight-bold">700+ DSA questions</span> on various platforms like Leetcode, GfG, HackerRank etc.</div> </div></li>
                             <li class="list-group-item border-0"> <div class="d-flex flex-row"> <div class="mr-2"><i class=" fa fa-trophy text-primary"></i></div><div> Achieved <span class="font-weight-bold">AIR 148</span>  and  <span class="font-weight-bold">AIR 35 </span>in TechGig Geek Goddess Open Round 2022 and TG3 Coding Challenge 2022 respectively</div> </div></li>
+                            <li class="list-group-item border-0"> <div class="d-flex flex-row"> <div class="mr-2"><i class=" fa fa-trophy text-primary"></i></div><div>  <span class="font-weight-bold">Global Rank 438</span>  in Starters100 on Codechef</div> </div></li>
                             <li class="list-group-item border-0"> <div class="d-flex flex-row"> <div class="mr-2"><i class=" fa fa-shield text-primary"></i></div><div> Achieved finalist positions in <span class="font-weight-bold">4+ hackathons,</span>  worked on real-world problems along with the team</div> </div></li>
                             <li class="list-group-item border-0"> <div class="d-flex flex-row"> <div class="mr-2"><i class=" fa fa-calendar text-primary"></i></div><div> Organized and coordinated <span class="font-weight-bold">3 National and International hackathons</span></div> </div></li>
                             <li class="list-group-item border-0"> <div class="d-flex flex-row"> <div class="mr-2"><i class=" fa fa-users text-primary"></i></div><div> Founded and lead a community, mentored over <span class="font-weight-bold">150 </span>students</div> </div></li>
