--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
                         
 
                         <!-- column 2--------------------------------------- -->
-                        <div class="card p-srijan">
+                        <div class="card p-codetrack">
                             <img class="card-img-top " src="./img/projects/codetrack.png" alt="Card image cap">
                             <div class="card-body">
                                 <h5 class="card-title text-primary">CodeTrack</h5>
@@ -423,11 +423,11 @@
                                     Join us to enhance your coding skills and enjoy friendly competition, all in one platform. Explore CodeTrack now for a seamless coding journey                                </p>
                                 <p class="card-text">
                                     <small>
-                                        <a href="https://srijan2.netlify.app/"
+                                        <a href="http://bit.ly/code-track"
                                         target="_blank" rel="noopener noreferrer">
                                         <span>Link <i class="fas fa-external-link"></i></span><br>
                                         </a>
-                                            <a href="https://github.com/itsvarsharma/srijanv2" target="_blank"
+                                            <a href="https://github.com/itsvarsharma/code-track" target="_blank"
                                             rel="noopener noreferrer">
                                             <span>Source code <i class="fas fa-code"></i></span>
                                         </a>
