--- a/index.html
+++ b/index.html
@@ -680,6 +680,31 @@
                     </div>
                 </div>
             </a>
+            <div
+                target="_blank" rel="noopener noreferrer" class="banner" aria-label="View More">
+                <div class="banner__grid">
+                    <div aria-hidden="true">
+                        <figure class="banner__figure" style="background-image: url(img/sessions/nftday.png);">
+                        </figure>
+                    </div>
+                    <div class="banner__text">
+                        <h2>NFT Day 2023, Bhopal</h2>
+                        <p>
+                            NFT Day 2023 was a dynamic gathering of 70-80 participants where I led engaging activities. 
+                            Distributing single sheets, I encouraged attendees to unleash their creativity. 
+                            The group then collectively reviewed each creation, fostering a collaborative and inspiring atmosphere. 
+                            Interactive feedback sessions allowed us to delve deeper into the artistic and technological aspects of the NFT world. 
+                            These activities added a unique spark, making NFT Day 2023 an unforgettable and enriching experience for all involved.
+                        </p>
+
+                        <p class="banner__link-wrapper">
+                            <!-- <span class="banner__link">
+                                <i>View More</i>
+                            </span> -->
+                        </p>
+                    </div>
+                </div>
+            </div>
         </section>
         
 
